--- a/index.html
+++ b/index.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rijan Shrestha</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rijan Shrestha - Portfolio</title>
 </head>
-<body>
-    <h1>Hello World.</h1>
-    <h1>Please watch our beloved Ramesh Sir's music video until my website is live</h1>
-    <iframe width="560" height="315" src="
-https://www.youtube.com/embed/3tdKYo-okAo?si=CGAwQfAZoGdmdNzV"
-title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
+
+  <header style="background-color: #333; color: #fff; text-align: center; padding: 20px 0;">
+    <h1>Rijan Shrestha</h1>
+    <h2>Graphics Designer &amp; Frontend Developer</h2>
+  </header>
+
+  <nav>
+    <!-- Include navigation links here if needed -->
+  </nav>
+
+  <main style="padding: 20px;">
+
+    <section id="about" style="margin-bottom: 30px;">
+      <h2 style="color: #333;">About Me</h2>
+      <p>Insert your bio or description here.</p>
+    </section>
+
+    <section id="portfolio" style="margin-bottom: 30px;">
+      <h2 style="color: #333;">Portfolio</h2>
+      <!-- Insert your portfolio items here -->
+      <div class="portfolio-item" style="border: 1px solid #ccc; padding: 10px; margin-bottom: 20px;">
+        <img src="portfolio-item-1.jpg" alt="Portfolio Item 1" style="max-width: 100%; height: auto;">
+        <h3>Portfolio Item 1</h3>
+        <p>Description of portfolio item 1</p>
+      </div>
+      <div class="portfolio-item" style="border: 1px solid #ccc; padding: 10px; margin-bottom: 20px;">
+        <img src="portfolio-item-2.jpg" alt="Portfolio Item 2" style="max-width: 100%; height: auto;">
+        <h3>Portfolio Item 2</h3>
+        <p>Description of portfolio item 2</p>
+      </div>
+      <!-- Add more portfolio items as needed -->
+    </section>
+
+    <section id="contact" style="margin-bottom: 30px;">
+      <h2 style="color: #333;">Contact Me</h2>
+      <p>Email: rijanshrestha@example.com</p>
+      <!-- Add more contact information or a contact form if needed -->
+    </section>
+
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Rijan Shrestha. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
