--- a/index.html
+++ b/index.html
@@ -4,46 +4,74 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rijan Shrestha - Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    header {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 20px 0;
+    }
+    h1, h2, h3 {
+      margin: 0;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    .section {
+      margin-bottom: 30px;
+    }
+    .portfolio-item {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
+    }
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
+<body>
 
-  <header style="background-color: #333; color: #fff; text-align: center; padding: 20px 0;">
+  <header>
     <h1>Rijan Shrestha</h1>
     <h2>Graphics Designer &amp; Frontend Developer</h2>
   </header>
 
-  <nav>
-    <!-- Include navigation links here if needed -->
-  </nav>
-
-  <main style="padding: 20px;">
-
-    <section id="about" style="margin-bottom: 30px;">
-      <h2 style="color: #333;">About Me</h2>
-      <p>Insert your bio or description here.</p>
+  <div class="container">
+    <section class="section" id="about">
+      <h2>About Me</h2>
+      <p>I am a passionate graphics designer and frontend developer.</p>
     </section>
 
-    <section id="portfolio" style="margin-bottom: 30px;">
-      <h2 style="color: #333;">Portfolio</h2>
-      <!-- Insert your portfolio items here -->
-      <div class="portfolio-item" style="border: 1px solid #ccc; padding: 10px; margin-bottom: 20px;">
-        <h3>Portfolio Item 1</h3>
-        <p>Description of portfolio item 1</p>
+    <section class="section" id="portfolio">
+      <h2>Portfolio</h2>
+      <div class="portfolio-item">
+        <h3>Project 1</h3>
+        <p>in process.</p>
       </div>
-      <div class="portfolio-item" style="border: 1px solid #ccc; padding: 10px; margin-bottom: 20px;">
-        <h3>Portfolio Item 2</h3>
-        <p>Description of portfolio item 2</p>
+      <div class="portfolio-item">
+        <h3>Project 2</h3>
+        <p>in process.</p>
       </div>
-      <!-- Add more portfolio items as needed -->
     </section>
 
-    <section id="contact" style="margin-bottom: 30px;">
-      <h2 style="color: #333;">Contact Me</h2>
-      <p>Email: rijanshrestha@example.com</p>
-      <!-- Add more contact information or a contact form if needed -->
-    </section>
-
-  </main>
+  </div>
 
   <footer>
     <p>&copy; 2024 Rijan Shrestha. All rights reserved.</p>
