--- a/index.html
+++ b/index.html
@@ -26,14 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Updated: Mar 13 2024 with Bootstrap v5.3.3
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -196,7 +188,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Completed a comprehensive graphic design course covering fundamental design principles, software tools, and industry best practices.Developed proficiency in graphic design software such as Adobe Photoshop, Illustrator, and InDesign. Participated in design workshops, projects, and critiques to enhance practical skills and creative thinking. Received positive feedback from instructors and peers for creativity, attention to detail, and dedication to learning.</p>
         </div>
 
         <div class="row">
