--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
   <!-- </main>End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer" class="w-100">
+  <footer >
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>Rijan Shrestha</span></strong>
