--- a/index.html
+++ b/index.html
@@ -4,115 +4,96 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rijan Shrestha - Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
-      scroll-behavior: smooth;
+      margin: 0;
+      padding: 0;
     }
 
     body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
       background-color: #f4f4f4;
       color: #333;
+      line-height: 1.6;
     }
 
     header {
-      background-color: #1e1e1e;
+      background-color: #333;
       color: #fff;
-      padding: 40px 0 20px;
       text-align: center;
+      padding: 30px 20px;
     }
 
     header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
+      font-size: 2rem;
+      margin-bottom: 5px;
     }
 
     header h2 {
+      font-size: 1rem;
       font-weight: normal;
-      font-size: 1.2rem;
-      color: #aaa;
-    }
-
-    nav {
-      background-color: #222;
-      padding: 10px 0;
-      text-align: center;
-    }
-
-    nav a {
-      color: #ddd;
-      margin: 0 15px;
-      text-decoration: none;
-      font-size: 0.95rem;
-    }
-
-    nav a:hover {
-      color: #26a69a;
     }
 
     .container {
       max-width: 900px;
       margin: 0 auto;
-      padding: 40px 20px;
+      padding: 30px 20px;
     }
 
     .section {
       margin-bottom: 40px;
     }
 
-    h2 {
-      font-size: 1.8rem;
+    .section h2 {
+      font-size: 1.5rem;
       margin-bottom: 10px;
-      color: #333;
+      border-bottom: 2px solid #26a69a;
+      display: inline-block;
+      padding-bottom: 5px;
+    }
+
+    .section p {
+      margin-top: 10px;
     }
 
     .portfolio-item {
       background-color: #fff;
       padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
       margin-bottom: 20px;
-      transition: transform 0.2s;
-    }
-
-    .portfolio-item:hover {
-      transform: translateY(-5px);
+      border-radius: 6px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
     .portfolio-item h3 {
-      margin-top: 0;
-      font-size: 1.2rem;
+      margin-bottom: 10px;
       color: #26a69a;
     }
 
-    .portfolio-item p {
-      margin: 5px 0 0;
-    }
-
     footer {
-      background-color: #1e1e1e;
-      color: #bbb;
+      background-color: #333;
+      color: #fff;
       text-align: center;
       padding: 15px 10px;
       font-size: 0.9rem;
+      margin-top: 40px;
     }
 
     @media (max-width: 600px) {
       header h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
+      }
+
+      header h2 {
+        font-size: 0.95rem;
       }
 
       .container {
         padding: 20px 15px;
       }
 
-      nav a {
-        display: inline-block;
-        margin: 8px;
+      .section h2 {
+        font-size: 1.3rem;
       }
     }
   </style>
@@ -124,37 +105,24 @@
     <h2>Graphics Designer & Frontend Developer</h2>
   </header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
   <div class="container">
     <section class="section" id="about">
       <h2>About Me</h2>
-      <p>Hello! I'm Rijan, a creative graphics designer and frontend developer with a passion for visual storytelling and user-centered design. I love turning ideas into reality through engaging UI and elegant code.</p>
+      <p>I am a passionate graphics designer and frontend developer.</p>
     </section>
 
     <section class="section" id="portfolio">
       <h2>Portfolio</h2>
 
       <div class="portfolio-item">
-        <h3>Project 1: Brand Identity</h3>
-        <p>Creating a full branding kit for a local business, including logo, color palette, typography, and promotional assets.</p>
+        <h3>Project 1</h3>
+        <p>In process.</p>
       </div>
 
       <div class="portfolio-item">
-        <h3>Project 2: Responsive Website</h3>
-        <p>Designed and developed a responsive multi-page website using HTML, CSS, and JavaScript for a travel agency.</p>
+        <h3>Project 2</h3>
+        <p>In process.</p>
       </div>
-    </section>
-
-    <section class="section" id="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:rijan@example.com">rijan@example.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/rijan" target="_blank">linkedin.com/in/rijan</a></p>
-      <p>GitHub: <a href="https://github.com/rijanshrestha" target="_blank">github.com/rijanshrestha</a></p>
     </section>
   </div>
 
